--- a/project/index.html
+++ b/project/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="padding-site">
     <header>
        
-        <button class="btn-cart" type="button">Корзина</button>
+        <button class="btn-cart" type="button">Корзина<span class="cart-counter"> 0</span></button>
     </header>
     <main>
         <div class="products"></div>
